# ilgi

./: .gitignore  Cargo.toml
crates/ilgi_core/: Cargo.toml
crates/ilgi_core/src/: error.rs  lib.rs  theme.rs
src/: config.rs  file_ops.rs  main.rs  theme.rs
src/sitebuild/: git.rs  mod.rs
