[package]
name = "ilgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*"
]

[dependencies]
serde_json = "1.0"
minify-js = "0.5.6"
minify-html = "0.10.8"
wasmtime = "8.0.0"
upon = "0.6.0"
tera = "1.18"
ignore = "0.4"
rayon = "1.7.0"
seahash = "4.1.0"
dashmap = "5.4.0"
uuid = "1.3.1"
oauth2 = "4.3.0"
memmap2 = "0.5.10"
rsass = "0.27.0"
relative-path = "1.8.0"
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio-stream = "0.1"
fallible-iterator = "0.2"
itertools = "0.10.5"
oxipng = "8.0.0"
tempfile = "3.5.0"
github_webhook_message_validator = "0.1.6"
rimage = "0.6.0"
imagesize = "0.11.0"
base64 = "0.21.0"
url = "2.3.1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.axum]
version = "0.6"
features = ["http2", "ws"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rhai]
version = "1.14"
features = ["sync", "internals", "no_std"]

[dependencies.ilgi_core]
path = "crates/ilgi_core"

[dependencies.moka]
version = "0.10.2"
features = ["future"]

[dependencies.miette]
version = "5.8.0"
features = ["fancy"]

[dependencies.chrono]
version = "0.4.24"
features = ["serde", "unstable-locales"]

[dependencies.confique]
version = "0.2.3"
features = ["yaml"]

[dependencies.lightningcss]
version = "1.0.0-alpha.41"
features = ["browserslist"]

[dependencies.svgcleaner]
git = "https://github.com/l1npengtul/svgcleaner"
branch = "master"
default-features = false

[dependencies.gix]
version = "0.44.1"
features = ["blocking-http-transport-reqwest-rust-tls", "async-network-client", "pack-cache-lru-static"]

[dependencies.sea-orm]
version = "0.11.3"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "sea-orm-internal", "postgres-array"]